infrastructure/hashicorpvault/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
  name: vault
  namespace: vault-project
spec:
  rules:
  - host: vault.local
    http:
      paths:
      - path: /v1
        backend:
          serviceName: vault
          servicePort: 8200
      - path: /
        backend:
          serviceName: vault-ui
          servicePort: 8200

  tls:
  - hosts:
    - vault.local
    secretName: vault-tls
